Crash when clicking on viewport shading properties #74227

Closed
opened 2020-02-26 10:35:43 +01:00 by alon abrany · 42 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.08

Blender Version
Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-25 18:52, hash: c05d83bc76
Worked: (optional)

Short description of error
Crash when clicking on viewport shading properties

Exact steps for others to reproduce the error
1.open blender
2.change shading to render
3.click the properties drop-down
Capture.JPG
bug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.08 **Blender Version** Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-25 18:52, hash: `c05d83bc76` Worked: (optional) **Short description of error** Crash when clicking on viewport shading properties **Exact steps for others to reproduce the error** 1.open blender 2.change shading to render 3.click the properties drop-down ![Capture.JPG](https://archive.blender.org/developer/F8372581/Capture.JPG) [bug.blend](https://archive.blender.org/developer/F8372973/bug.blend)
Author

Added subscriber: @alonabrany

Added subscriber: @alonabrany

#74820 was marked as duplicate of this issue

#74820 was marked as duplicate of this issue

#74251 was marked as duplicate of this issue

#74251 was marked as duplicate of this issue

#74217 was marked as duplicate of this issue

#74217 was marked as duplicate of this issue
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

I cannot reproduce the error using AMD NAVI10 (DRM 3.33.0, 5.3.0-40-generic, LLVM 9.0.0) X.Org 4.5 (Core Profile) Mesa 19.2.8 on Ubuntu 19.10.
Did this work in a previous version for you?

I cannot reproduce the error using `AMD NAVI10 (DRM 3.33.0, 5.3.0-40-generic, LLVM 9.0.0) X.Org 4.5 (Core Profile) Mesa 19.2.8` on Ubuntu 19.10. Did this work in a previous version for you?

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

I can confirm. Engine needs to be set to Eevee.

System Information
Operating system: Windows-10-10.0.16299-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86
Blender Version
Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-25 18:52, hash: c05d83bc76

I can confirm. Engine needs to be set to Eevee. **System Information** Operating system: Windows-10-10.0.16299-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 **Blender Version** Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-25 18:52, hash: `c05d83bc76`

Added subscriber: @ssh4

Added subscriber: @ssh4

Same issue

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-25 18:52, hash: c05d83bc76

Worked: blender-2.83-cad09e5227df 2020/02/06 worked without issues.

Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF7E65B15E0
Module  : C:\Program Files\Blender Foundation\blender-2.83\blender.exe

Also viewport strangely blinking when you switch between modes.
Looks like crash related to latest pass support in Eevee.
NVIDIA GPUs.

Same issue **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-25 18:52, hash: `c05d83bc76` Worked: blender-2.83-cad09e5227df 2020/02/06 worked without issues. ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF7E65B15E0 Module : C:\Program Files\Blender Foundation\blender-2.83\blender.exe ``` Also viewport strangely blinking when you switch between modes. Looks like crash related to latest pass support in Eevee. NVIDIA GPUs.

Added subscriber: @fclem

Added subscriber: @fclem

Added subscribers: @brecht, @dfelinto

Added subscribers: @brecht, @dfelinto

I can't reproduce here either (tried the reported version and master). @brecht do you have a backtrace of the crash?

I can't reproduce here either (tried the reported version and master). @brecht do you have a backtrace of the crash?

No, but presumably it's Windows specific.

No, but presumably it's Windows specific.

I cannot reproduce on:

Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.45```
I cannot reproduce on: ````Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.45```

Added subscriber: @RL

Added subscriber: @RL

https://developer.blender.org/T74217 might be related. Recent build crashes when changing viewport shading to Material Preview or When render engine is set to Eevee, set viewport to Rendered View and under viewport shading properties, unchecking scene world crashes blender.

https://developer.blender.org/T74217 might be related. Recent build crashes when changing viewport shading to Material Preview or When render engine is set to Eevee, set viewport to Rendered View and under viewport shading properties, unchecking scene world crashes blender.

It doesn't crash when run from blender_debug_gpu.cmd.

It doesn't crash when run from blender_debug_gpu.cmd.
Author

Reproducing:
Make sure you are on Eeevee, ENABLE Ambient Occlusion on Scene & ViewLayer

file attached
bug.blend

Reproducing: Make sure you are on Eeevee, ENABLE Ambient Occlusion on Scene & ViewLayer file attached [bug.blend](https://archive.blender.org/developer/F8372976/bug.blend)

Added subscriber: @Znio.G

Added subscriber: @Znio.G

Yep, I can confirm here too on windows, the moment you enable Ambient Occlusion, it doesn't matter if you're in material preview or Eevee, accessing the viewport shading leads to a crash.

Yep, I can confirm here too on windows, the moment you enable Ambient Occlusion, it doesn't matter if you're in material preview or Eevee, accessing the viewport shading leads to a crash.

It was surely because of a constant defined twice (crash was happening here on linux+Mesa). Maybe fe41c1ec0b fixed it. Can anyone confirm the fix?

It was surely because of a constant defined twice (crash was happening here on linux+Mesa). Maybe fe41c1ec0b79 fixed it. Can anyone confirm the fix?

Fixed for me.

Fixed for me.

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-02-26 16:52:51 +01:00

Still crashing here with a GTX 1050 TI, only when enabling Ambient Occlusion.
I have opened a new report here #74251.

Still crashing here with a GTX 1050 TI, only when enabling Ambient Occlusion. I have opened a new report here #74251.

Not fixed for 2/4x GTX1080ti

Not fixed for 2/4x GTX1080ti

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

Please:

  • Mention operating system and exact Blender version tested.
  • On Windows, run blender_debug_gpu.cmd, make Blender crash, then attach the resulting logs here.
  • Attach an example .blend file that crashes when enabling material/rendered shading (or confirm if bug.blend attached to this report causes the issue).
Please: * Mention operating system and exact Blender version tested. * On Windows, run `blender_debug_gpu.cmd`, make Blender crash, then attach the resulting logs here. * Attach an example .blend file that crashes when enabling material/rendered shading (or confirm if bug.blend attached to this report causes the issue).

For me running blender_debug_gpu.cmd does not produce a crash. It does crash in regular mode.
blender_debug_output.txt
blender_system_info.txt

For me running *blender_debug_gpu.cmd* does not produce a crash. It does crash in regular mode. [blender_debug_output.txt](https://archive.blender.org/developer/F8375174/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F8375173/blender_system_info.txt)

Does running blender_debug_log.cmd crash?

Does running `blender_debug_log.cmd` crash?

In #74227#881299, @brecht wrote:
Does running blender_debug_log.cmd crash?

Nope.

> In #74227#881299, @brecht wrote: > Does running `blender_debug_log.cmd` crash? Nope.
Member

I can reproduce a crash on Windows 10 with AMD Radeon RX 5700 ATI Technologies Inc. 4.5.13572 Core Profile Context 19.11.3 26.20.13031.18002:

>	blender.exe!ui_item_rna_size(uiLayout * layout, const unsigned char * name, int icon, PointerRNA * ptr, PropertyRNA * prop, int index, bool icon_only, bool compact, int * r_w, int * r_h) Line 1804	C

 	blender.exe!uiItemFullR(uiLayout * layout, PointerRNA * ptr, PropertyRNA * prop, int index, int value, int flag, const unsigned char * name, int icon) Line 2011	C
 	blender.exe!rna_uiItemR(uiLayout * layout, PointerRNA * ptr, const unsigned char * propname, const unsigned char * name, const unsigned char * text_ctxt, bool translate, int icon, bool expand, bool slider, int toggle, bool icon_only, bool event, bool full_event, bool emboss, int index, int icon_value, bool invert_checkbox) Line 137	C
 	blender.exe!UILayout_prop_call(bContext * C, ReportList * reports, PointerRNA * _ptr, ParameterList * _parms) Line 1791	C
 	blender.exe!RNA_function_call(bContext * C, ReportList * reports, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 7606	C
 	blender.exe!pyrna_func_call(BPy_FunctionRNA * self, _object * args, _object * kw) Line 6148	C
 	[External Code]	
 	blender.exe!bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 8325	C
 	blender.exe!panel_draw(const bContext * C, Panel * pnl) Line 144	C
 	blender.exe!ui_paneltype_draw_impl(bContext * C, PanelType * pt, uiLayout * layout, bool show_header) Line 5324	C
 	blender.exe!ui_paneltype_draw_impl(bContext * C, PanelType * pt, uiLayout * layout, bool show_header) Line 5342	C
 	blender.exe!UI_paneltype_draw(bContext * C, PanelType * pt, uiLayout * layout) Line 5356	C
 	blender.exe!ui_item_paneltype_func(bContext * C, uiLayout * layout, void * arg_pt) Line 2723	C
 	blender.exe!ui_block_func_POPOVER(bContext * C, uiPopupBlockHandle * handle, void * arg_pup) Line 139	C
 	blender.exe!ui_popup_block_refresh(bContext * C, uiPopupBlockHandle * handle, ARegion * butregion, uiBut * but) Line 598	C
 	blender.exe!ui_popup_block_create(bContext * C, ARegion * butregion, uiBut * but, uiBlock *(*)(bContext *, ARegion *, void *) create_func, uiBlock *(*)(bContext *, uiPopupBlockHandle *, void *) handle_create_func, void * arg, void(*)(void *) arg_free) Line 823	C
 	blender.exe!ui_popover_panel_create(bContext * C, ARegion * butregion, uiBut * but, void(*)(bContext *, uiLayout *, void *) menu_func, void * arg) Line 286	C
 	blender.exe!ui_block_open_begin(bContext * C, uiBut * but, uiHandleButtonData * data) Line 4015	C
 	blender.exe!button_activate_state(bContext * C, uiBut * but, uiHandleButtonState state) Line 7876	C
 	blender.exe!ui_do_but_BLOCK(bContext * C, uiBut * but, uiHandleButtonData * data, const wmEvent * event) Line 5542	C
 	blender.exe!ui_do_button(bContext * C, uiBlock * block, uiBut * but, const wmEvent * event) Line 7537	C
 	blender.exe!ui_handle_button_event(bContext * C, const wmEvent * event, uiBut * but) Line 8661	C
 	blender.exe!ui_region_handler(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 10569	C
 	blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 617	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2553	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2799	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3252	C
 	blender.exe!WM_main(bContext * C) Line 421	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 520	C

Weirdly, this does not seem to be related to the GPU at a first glance.

I can reproduce a crash on Windows 10 with `AMD Radeon RX 5700 ATI Technologies Inc. 4.5.13572 Core Profile Context 19.11.3 26.20.13031.18002`: ``` > blender.exe!ui_item_rna_size(uiLayout * layout, const unsigned char * name, int icon, PointerRNA * ptr, PropertyRNA * prop, int index, bool icon_only, bool compact, int * r_w, int * r_h) Line 1804 C blender.exe!uiItemFullR(uiLayout * layout, PointerRNA * ptr, PropertyRNA * prop, int index, int value, int flag, const unsigned char * name, int icon) Line 2011 C blender.exe!rna_uiItemR(uiLayout * layout, PointerRNA * ptr, const unsigned char * propname, const unsigned char * name, const unsigned char * text_ctxt, bool translate, int icon, bool expand, bool slider, int toggle, bool icon_only, bool event, bool full_event, bool emboss, int index, int icon_value, bool invert_checkbox) Line 137 C blender.exe!UILayout_prop_call(bContext * C, ReportList * reports, PointerRNA * _ptr, ParameterList * _parms) Line 1791 C blender.exe!RNA_function_call(bContext * C, ReportList * reports, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 7606 C blender.exe!pyrna_func_call(BPy_FunctionRNA * self, _object * args, _object * kw) Line 6148 C [External Code] blender.exe!bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 8325 C blender.exe!panel_draw(const bContext * C, Panel * pnl) Line 144 C blender.exe!ui_paneltype_draw_impl(bContext * C, PanelType * pt, uiLayout * layout, bool show_header) Line 5324 C blender.exe!ui_paneltype_draw_impl(bContext * C, PanelType * pt, uiLayout * layout, bool show_header) Line 5342 C blender.exe!UI_paneltype_draw(bContext * C, PanelType * pt, uiLayout * layout) Line 5356 C blender.exe!ui_item_paneltype_func(bContext * C, uiLayout * layout, void * arg_pt) Line 2723 C blender.exe!ui_block_func_POPOVER(bContext * C, uiPopupBlockHandle * handle, void * arg_pup) Line 139 C blender.exe!ui_popup_block_refresh(bContext * C, uiPopupBlockHandle * handle, ARegion * butregion, uiBut * but) Line 598 C blender.exe!ui_popup_block_create(bContext * C, ARegion * butregion, uiBut * but, uiBlock *(*)(bContext *, ARegion *, void *) create_func, uiBlock *(*)(bContext *, uiPopupBlockHandle *, void *) handle_create_func, void * arg, void(*)(void *) arg_free) Line 823 C blender.exe!ui_popover_panel_create(bContext * C, ARegion * butregion, uiBut * but, void(*)(bContext *, uiLayout *, void *) menu_func, void * arg) Line 286 C blender.exe!ui_block_open_begin(bContext * C, uiBut * but, uiHandleButtonData * data) Line 4015 C blender.exe!button_activate_state(bContext * C, uiBut * but, uiHandleButtonState state) Line 7876 C blender.exe!ui_do_but_BLOCK(bContext * C, uiBut * but, uiHandleButtonData * data, const wmEvent * event) Line 5542 C blender.exe!ui_do_button(bContext * C, uiBlock * block, uiBut * but, const wmEvent * event) Line 7537 C blender.exe!ui_handle_button_event(bContext * C, const wmEvent * event, uiBut * but) Line 8661 C blender.exe!ui_region_handler(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 10569 C blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 617 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2553 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2799 C blender.exe!wm_event_do_handlers(bContext * C) Line 3252 C blender.exe!WM_main(bContext * C) Line 421 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 520 C ``` Weirdly, this does not seem to be related to the GPU at a first glance.

@JacquesLucke can you bisect it?

@JacquesLucke can you bisect it?

Same situation. Blender not crashing on debug mode. But only on normal.
Here is a logs. But without crashes, in case they can be useful.

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-26 22:33, hash: 1a1f2912e6

blender_system_info.txt

blender_debug_output.txt

Same situation. Blender not crashing on debug mode. But only on normal. Here is a logs. But without crashes, in case they can be useful. **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 5), branch: master, commit date: 2020-02-26 22:33, hash: `1a1f2912e6` [blender_system_info.txt](https://archive.blender.org/developer/F8375212/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F8375213/blender_debug_output.txt)
Member

@dfelinto, investigating this right now. One moment.

@dfelinto, investigating this right now. One moment.

This issue was referenced by 57bd1a0ae1

This issue was referenced by 57bd1a0ae18b327a57c187c48bdb9effcb5f4b6a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

It probably did not happen all the time, because the memory was zero initialized without RNA_enum_item_end.

It probably did not happen all the time, because the memory was zero initialized without `RNA_enum_item_end`.
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Added subscriber: @jmarkt

Added subscriber: @jmarkt
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
12 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74227
No description provided.