Fix T74227: Crash when clicking on viewport shading properties